# Agent-Hub

./: .env.example  .gitignore  FEATURES.md  README.md  SETUP.md  project.md
agent_lab/: pyproject.toml
agent_lab/agent_lab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agent_lab/agent_lab_core/: __init__.py  cli.py  db.py  langfuse_util.py  parser.py  runner.py  server.py
agent_lab/agent_lab_ui/: VERCEL.md  next.config.ts  package-lock.json  package.json
agent_lab/agent_lab_ui/app/: globals.css  layout.tsx  page.tsx
agent_lab/agent_lab_ui/app/dashboard/: page.tsx
agent_lab/agent_lab_ui/app/diff/: page.tsx
agent_lab/agent_lab_ui/app/diff-viewer/: page.tsx
agent_lab/agent_lab_ui/app/docs/: layout.tsx  page.tsx
agent_lab/agent_lab_ui/app/run/[tag]/: page.tsx
agent_lab/agent_lab_ui/app/version-history/: page.tsx
agent_lab/agent_lab_ui/components/: agentlab-mark.tsx  app-shell.tsx  header-brand.tsx  main-nav.tsx
agent_lab/agent_lab_ui/components/agent-lab/: agent-snapshot-view.tsx  workspace-ui.tsx
agent_lab/agent_lab_ui/components/landing/: landing-page.tsx
agent_lab/agent_lab_ui/components/vera/: index.ts  vera-hero.tsx  vera-mascot.tsx  vera-robot-scene.tsx  vera-spline-canvas.tsx
agent_lab/agent_lab_ui/hooks/: use-agentlab-workspace.ts
agent_lab/agent_lab_ui/lib/: anthropic-brand.ts  fetch-agent-snapshot.ts
agent_lab/agent_lab_ui/scripts/: patch-spline-runtime.mjs
agent_lab/deploy/: README.md  agentlab-api.service  deploy-via-aws.sh  remote-bootstrap.sh  sync-to-ec2.sh
target_projects/: .gitkeep  (+1 more)
(+33 files in other folders)
